--- a/Prince_Edward_Island.mw
+++ b/Prince_Edward_Island.mw
@@ -6,7 +6,7 @@
 |Fullname            = Lalawigan ning Prince Edward Island
 |EntityAdjective     = Provincial
 |Flag                = Flag of Prince Edward Island.svg
-|CoatOfArms          = Coat of Arms of Prince Edward Island.png
+|CoatOfArms          =
 |Map                 = Prince Edward Island-map.png
 |Motto               = "Parva Sub Ingenti"{{spaces|2}}<small>([[Latin]])<br />"The Small Protected By The Great"</small>
 |OfficialLang        = [[English language|English]]
