*Empty MediaWiki Message*

--- a/Lakanbaleng_Quezon.mw
+++ b/Lakanbaleng_Quezon.mw
@@ -1,6 +1,7 @@
 {{Infobox Philippine City |
  infoboxtitle = Lakanbalen Quezon |
- sealfile     = [[File:Quezon City Seal.svg|150px|]] |
+ sealfile     = {{#property:P158}} |
+ flag         = {{#property:P41}}|
  region       = [[Metro Manila|National Capital Region]] |
  province     = |
  founded      = [[Octubri 22]], [[1939]] |
@@ -11,10 +12,10 @@
  areakm2      = 161.12 |
  coordinates  = 14°38' N, 121°2' E |
  barangays    = 142 |
- Distritus    = 1st to 4th Distritus of Quezon Lakanbalen |
+ Districts    = 1st to 4th Distritus of Quezon Lakanbalen |
  class        = primeru klasi; urban |
  mayor        = Feliciano "Sonny" Belmonte Jr. |
- locatormapfile = [[File:Ph_locator_ncr_quezon.png]] |
+ locatormapfile = Ph_locator_ncr_quezon.png |
 }}
 
 [[File:Quezon City Flag.svg|left|thumb|180px|Quezon City Flag]] Ing '''Quezon Lakanbalen''' <b title="Pronunciation: ke′zon, /"kEZO:n/" style="position:relative;top:-0.3em;font-size:0.75em;color:#666;">P</b>
