*Empty MediaWiki Message*

--- a/Danum.mw
+++ b/Danum.mw
@@ -1,5 +1,5 @@
 [[File:Water droplet blue bg05.jpg|thumb|Ing danum.]]
-Ing '''Danum''' (pormula kemikal: '''H<sub>2</sub>O''') metung yang pluwidung bubuwu kareng ilug, karayatmalatan ampong uran king yatu, at iya pin ing pun laman da reng pluwidu ka reng lalang (organismu).
+Ing '''Danum''' (pormula kemikal: '''H<sub>2</sub>O''') metung yang pluwidung bubuwu kareng ilug, karayatmalatan ampong uran king yatu, at iya pin ing pun laman da reng pluwidu kareng lalang (organismu). Maki 71% ning danum king babo ning yatu.
 
 ==Kasusug Kilwal==
 {{Sisterlinks|water}}
