([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Eurpean Style Street.JPG]] → [[File:European Style Street.jpg]] #3

--- a/Kaiping.mw
+++ b/Kaiping.mw
@@ -12,7 +12,7 @@
 |seat = Changsha Subdistrict (长沙街道)
 |seat_type = Tungku ning kondadu (''County seat'')
 |settlement_type = [[Lakanbalen a kadaneng kondadu]]
-|image_skyline = Eurpean Style Street.JPG
+|image_skyline = European Style Street.jpg
 |imagesize = 250px
 |image_caption = Metung a dalan king Balen ning Chikan 
 |image_map = Location_of_Kaiping_within_Guangdong_(China).png
