--- a/Central_Philippine_University.mw
+++ b/Central_Philippine_University.mw
@@ -1,10 +1,10 @@
 {{Infobox_University
 |name           = Central Philippine University
-|image          = [[File:Central Philippine University Church in Iloilo City, Western Visayas.jpg|220px]]
+|image          = [[File:Central Philippine University Church.JPG|240px]]
 |motto          = ''Scientia et Fides'' (Ciencia ampong Kasalpantayanan)
 |established    = [[1905]]
 |type           = [[w:Private school|Privadu]]
-|president=
+|president= 
 |city           = [[Iloilo Lakanbalen]]
 |state          = [[Iloilo]]
 |country        = [[Filipinas]]
@@ -12,7 +12,7 @@
 |undergrad      =
 |postgrad       =
 |staff=
-|campus         = 240,000 m&sup2;
+|campus         = 240,000 m&sup2 (main);
 |free_label     = Imno
 |free           =
 |website= http://www.cpu.edu.ph
@@ -22,17 +22,16 @@ Ing '''Central Philippine University''' metung yang institucion ning matas a pip
 
 ==Campus==
 <gallery>
-Image:Central Philippine University Church in Iloilo City, Western Visayas.jpg|Central Philippine University Church.
-|Rose Memorial Auditorium.
-Image:(Central_Philippine_University)_-_New_Valentine_Building.jpg|New Valentine Building of the College of Business and Accountancy.
-|Loreto D. Tupaz Hall of the College of Nursing and Allied Health Sciences
+Image:Central Philippine University Church.JPG|Central Philippine University Church.
+Image:Rose_Memorial_Auditorium_(of_Central_Philippine_University).JPG|Rose Memorial Auditorium.
+Image:New_Valentine_Building_(of_Central_Philippine_University_College_of_Business_and_Accountancy).JPG|New Valentine Hall of the College of Business and Accountancy.
+Image:Loreto_D._Tupaz_Hall_(of_Central_Philippine_University_College_of_Nursing_and_Allied_Health_Sciences).JPG|Loreto D. Tupaz Hall of the College of Nursing and Allied Health Sciences
 Image:Engineering_Building.JPG|Engineering Building.
-Image:Central_Philippine_University_Library_-_Henry_Luce_III_Library_(Main_Library).jpg|The Henry Luce III Library, the main library of Central Philippine University Library System.
-Image:CPU Wall of Remembrance.JPG|Wall of Remembrance.
-|Central Philippine University Gymnasium .
-Image:Dr. Alfonso A. Uy - Student Union Building.JPG|Dr. Alfonso A. Uy - Building (''food court''/''mini mall'').
+Image:Central_Philippine_University_Main_Library_(the_Henry_Luce_III_Library).JPG|The Henry Luce III Library, the main library of Central Philippine University Library System.
+Image:Central Philippine University's - Wall of Remembrance.JPG|Wall of Remembrance.
+Image:Central_Philippine_University_Gymnasium.JPG|Central Philippine University Gymnasium .
+Image:Alfonso_A._Uy_Student_Union_Building_of_Central_Philippine_University.jpg|Dr. Alfonso A. Uy - Building (''food court''/''mini mall'').
 </gallery>
-
 
 
 [[Category:Ding Universidad at Colegiu king Filipinas]]
