--- a/Template:Infobox_musical_artist.mw
+++ b/Template:Infobox_musical_artist.mw
@@ -36,7 +36,7 @@
 | label7     = Mete
 | data7      = {{br separated entries|{{{death_date|}}}|{{{death_place|}}}}}
 
-| label8     = [[Music genre|Uri ning musika/Genre]]
+| label8     = [[Music genre|Tinduk ning tigtig (''Genre'')]]
 | data8      = {{{Genre|{{{genre|}}}}}}
 
 | class9     = role
