*Empty MediaWiki Message*

--- a/Template:Infobox_musical_artist.mw
+++ b/Template:Infobox_musical_artist.mw
@@ -24,7 +24,7 @@
 | data3       = {{{Birth_name|{{{birth_name|}}}}}}
 
 | class4      = nickname
-| label4      = Kilala ya murin king lagyung
+| label4      = Kilala ya murin anti mung
 | data4       = {{{Alias|{{{alias|}}}}}}
 
 | label5     = Mibait
@@ -50,13 +50,13 @@
 | label11    = Banwa nung kapilan aktibu
 | data11     = {{{Years_active|{{{years_active|{{{yearsactive|}}}}}}}}}
 
-| label12    = [[Record label|Marka]]
+| label12    = [[Record label|Marka ning talaplaka]]
 | data12     = {{{Label|{{{label|}}}}}}
 
 | label13    = Palageng makaugne
 | data13     = {{{Associated_acts|{{{associated_acts|}}}}}}
 
-| label14    = Karinan-Aptas/Website
+| label14    = Karinan-Aptas (''Website'')
 | data14     = {{{website|{{{URL|{{{url|}}}}}}}}}
 
 | header15   = {{#if:{{{Current_members|{{{current_members|}}}}}}|Members}}
