*Empty MediaWiki Message*

--- a/Antonio_Trillanes.mw
+++ b/Antonio_Trillanes.mw
@@ -1,3 +1,6 @@
 I '''Antonio "Sonny" Fuentes Trillanes IV''' (mibait Agostu 6, 1971), metung yang politiku king [[Pilipinas]].
 
 {{stub}}
+
+
+[[bcl:Antonio Trillanes]]
