--- a/Central_Philippine_University.mw
+++ b/Central_Philippine_University.mw
@@ -24,7 +24,7 @@ Ing '''Central Philippine University''' metung yang institucion ning matas a pip
 <gallery>
 Image:Central Philippine University Church.JPG|Central Philippine University Church.
 Image:Rose_Memorial_Auditorium_(of_Central_Philippine_University).JPG|Rose Memorial Auditorium.
-Image:New_Valentine_Building_(of_Central_Philippine_University_College_of_Business_and_Accountancy).JPG|New Valentine Hall of the College of Business and Accountancy.
+Image:New_Valentine_Hall.JPG|New Valentine Hall of the College of Business and Accountancy.
 Image:Loreto_D._Tupaz_Hall_(of_Central_Philippine_University_College_of_Nursing_and_Allied_Health_Sciences).JPG|Loreto D. Tupaz Hall of the College of Nursing and Allied Health Sciences
 Image:Engineering_Building.JPG|Engineering Building.
 Image:Central_Philippine_University_Main_Library_(the_Henry_Luce_III_Library).JPG|The Henry Luce III Library, the main library of Central Philippine University Library System.
