*Empty MediaWiki Message*

--- a/Lawu_aldo.mw
+++ b/Lawu_aldo.mw
@@ -1,5 +1,6 @@
+:''Para king pamaglawu bulan ("lunar eclipse"), lawen ya ing [[Lawo]].''
 [[File:Total Solar Eclipse, 9 March 2016, from Balikpapan, East Kalimantan, Indonesia.JPG|350px|thumb|Ing lawu aldo king Balikpapan, [[Indonesia]] anyang Marsu 9, 2016.]]
-Ing '''lawu aldo''' ([[Amanung Ingles|Ingles]]: ''solar eclipse''), anti akit ibat yatu, metung yang tinduk ng pamaglawu (''eclipse'') a malilyari patse dadalan ya ing [[bulan]] kapilatan ning [[aldo]] ampong yatu, at alus o buwu ya makasagkan ing bulan king aldo.
+Ing '''lawu aldo''' o '''lawo aldo''' ([[Amanung Ingles|Ingles]]: ''solar eclipse''), anti akit ibat yatu, metung yang tinduk ng pamaglawu (''eclipse'') a malilyari patse dadalan ya ing [[bulan]] kapilatan ning [[aldo]] ampong yatu, at alus o buwu ya makasagkan ing bulan king aldo.
 
 {| class=wikitable
 |+ Deng 5 lawu aldo anyang 1935
