updated portrait with professionally taken photograph freely licensed by Ms. magazine

--- a/Beyoncé_Knowles.mw
+++ b/Beyoncé_Knowles.mw
@@ -1,9 +1,9 @@
 
 {{Infobox person
 | name = Beyoncé Knowles
-| image = Beyonce_-_Montreal 2013 (3) crop.jpg
+| image = Ms. magazine Cover - Spring 2013.jpg
 | image_size = 220px
-| caption = I Knowles king [[The Mrs. Carter Show World Tour]], 2013
+| caption = Beyoncé Knowles, 2013
 | alt = A woman sings into a microphone
 | alias = Sasha Fierce,<!--NOTE TO EDITORS: Sasha Fierce is the name of Knowles' alter-ego. This name therefore is an alias per [[Template:Infobox Musical artist#Alias]].--> Third Ward Trill<!--NOTE TO EDITORS: Credited under this name on Jay-Z's album, "Magna Carta... Holy Grail", on the tracks "Tom Ford" and "BBC".-->
 |birth_name= Beyoncé Giselle Knowles
