*Empty MediaWiki Message*

--- a/Arzúa.mw
+++ b/Arzúa.mw
@@ -2,7 +2,7 @@
 official_name = Concello de Arzúa |
 nickname = |
 image_flag =  |
-image_seal = Escudo Arzúa.jpg |
+image_seal = Arzúa.svg |
 image_map = Situacion Arzúa.PNG |
 map_caption = Location of '''Arzúa''' within [[Galicia (Spain)|Galicia]] |
 subdivision_type = [[Parroquia]]s|
