Replacing Chandigarh_Monument.jpg with [[File:Open_Hand_Monument_in_Chandigarh.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: Criterion 2).

--- a/Chandigarh.mw
+++ b/Chandigarh.mw
@@ -7,7 +7,7 @@
 |capital = Chandigarh
 |largest_city = Chandigarh
 |locator_position = right
-|skyline = Chandigarh Monument.jpg
+|skyline = Open Hand Monument in Chandigarh.jpg
 |skyline_caption = The Open Hand Monument
 |districts = 1
 |latd = 30.75
