*Empty MediaWiki Message*

--- a/Elisha_Cuthbert.mw
+++ b/Elisha_Cuthbert.mw
@@ -17,7 +17,7 @@
 | emmyawards    = 
 | tonyawards    = 
 }}
-I '''Elisha Cuthbert''' (mibait [[Nobiembri 30]], [[1982]]) metung yang dari [[Canada]] [[artista]]. 
+I '''Elisha Cuthbert''' (mibait [[Nobiembri 30]], [[1982]]) metung yang [[artista]] king [[Canada]].
 
 {{Commonscat|Elisha Cuthbert}}
 
