--- a/Elisha_Cuthbert.mw
+++ b/Elisha_Cuthbert.mw
@@ -22,3 +22,5 @@ I '''Elisha Cuthbert''' (mibait [[Nobiembri 30]], [[1982]]) metung yang [[artist
 {{Commonscat|Elisha Cuthbert}}
 
 {{DEFAULTSORT:Cuthbert, Elisha }}
+
+[[Category:Deng artista king Kanada]]
