*Empty MediaWiki Message*

--- a/Template:Human_anatomical_features.mw
+++ b/Template:Human_anatomical_features.mw
@@ -1,6 +1,6 @@
 '''[[head (anatomy)|BUNTUK]]''': [[Bungu ning tau|Bungu]] - [[Kanwan]] – [[Mata]] – [[Balugbug]] – [[Arung|Arung]] – [[Mouth (human)|Asbuk]] – [[Dila]] – [[ipan|Ipan]] – [[Panga|Panga]] – [[Lupa]] – [[Pisni]] – [[Baba]]
 
-[[Image:Human body features.png|left|75px]] 
+[[Image:Human body features-en dark skin.svg|left|100px]] 
 '''[[Batal|BATAL]]''': [[Akmulan]] - [[Larynx]] – [[Adam's apple]] 
 
 '''[[Salu|SALU]]''': [[Pago]] – [[Vertebral column|Galudgud]] – [[Susu]] – [[Salu]] – [[Tagiang|Tagiang]] – [[Human abdomen|Atian]] – [[Pusad]] 
