--- a/Ernest_Borgnine.mw
+++ b/Ernest_Borgnine.mw
@@ -11,7 +11,7 @@
 | occupation = Artista
 | years_active = 1951–2012
 | spouse = Rhoda Kemins <br />(m.1949-1958; divorced) <br />[[Katy Jurado]] <br />(m.1959-1963; divorced) <br />[[Ethel Merman]] <br />(m.1964-1965; divorced) <br />Donna Rancourt <br />(m.1965-1972; divorced) <br />[[Tova Traesnaes]] <br />(m.1973-2012; his death)
-| signature = ErnestBorgnine.png
+| signature = Ernest Borgnine (signature).png
 }}
 I '''Ernest Borgnine''' (mibait '''Ermes Effron Borgnino''', Enero 24, 1917&nbsp;– Julio 8, 2012) metung yang [[Estados Unidos|Americanung]] artista king pelikula ampong telebisyon a maki karerang miglambat maygit anam a dekada. Metung yang e karaniwang uring (''unconventional'') bida kareng dakal a pelikula kanitang dekada 1950, at sinambut yang Oscar anyang 1955 para king ''[[Marty (pelikula)|Marty]]''. King telebisyon, linage yang Quinton McHale ketang seryeng  1962–1966 a ''[[McHale's Navy]]'', at kadwa yang bida (''co-star'') king seryeng dekada1980 a   ''[[Airwolf]]'', bukud kareng miyayaliwang uring papil. Kilala ya murin i Borgnine king papil na king [[Mermaid Man]] king [[cartoon series|animated television series]] a ''[[SpongeBob SquarePants]]''. Menikwa yang pamagmunikala (''nomination'') king [[Emmy Award]] para king obra na king seryeng ''[[ER (seryeng telebisyon)|ER]]''.
 
