*Empty MediaWiki Message*

--- a/Suho.mw
+++ b/Suho.mw
@@ -1,5 +1,25 @@
-[[File:Kim Joon Myun at the Hallyu Star Street on March 2014 01.jpg|right|200px]]
-I '''Kim Joon-myun''' ([[Hangul]]: 김준면, [[Hanja]]: 金俊勉, mibait Mayu 22, 1991 king [[Seoul]], [[Mauling Korea]]), mas mekilala yang '''Suho''' ([[Hangul]]: 수호), metung yang talakanta at artista king [[Mauling Korea]]. Metung yang miyembru ning bandang [[EXO]].
+{{Infobox person
+| name         = Suho
+| image        = Kim_Joon_Myun_at_the_Hallyu_Star_Street_on_March_2014_01.jpg
+| caption      = I Suho, king ''Hallyu Star Street'' anyang Marsu 2014
+| native_name  = 김준면
+| birth_name   = Kim Jun-Myeon
+| birth_date   = {{Birth date and age|mf=yes|1991|5|22}}
+| birth_place  = [[Seoul]], [[South Korea|Mauling Korea]]
+| occupation   = [[Singer|Talakanta]], [[Actor|aktor]]
+| religion     = [[Buddhism|Budismu]]
+}}
+{{Infobox Korean name|child=yes|color=transparent|
+ | hangulborn  = {{linktext|김준면|}}
+ | hanjaborn    = {{linktext|金俊勉|}}
+ | rrborn      = Kim Junmyeon
+ | hangul      = {{linktext|수호|}}
+ | hanja        = {{linktext|守護|}}
+ | rr          = Suho
+}}
+{{Contains Korean text}}
+
+I '''Kim Joon-myun''' ([[Hangul]]: 김준면, [[Hanja]]: 金俊勉, mibait Mayu 22, 1991 king [[Seoul]], [[Mauling Korea]]), kebaluwan ya anti mung '''Suho''' ([[Hangul]]: 수호), metung yang talakanta at artista king [[Mauling Korea]]. Metung yang miyembru ning bandang [[EXO]].
 
 {{stub}}
 
