--- a/Kon_Tum_Lalawigan.mw
+++ b/Kon_Tum_Lalawigan.mw
@@ -20,9 +20,9 @@ Ing '''Kon Tum Province''' atiu king [[Tây Nguyên|Central Highlands]] labuad n
 
 == Suglung Palwal ==
 * [http://www.kontum.gov.vn/ Kon Tum Province government official site]
-* [http://www.hotels-in-vietnam.com hotel guide - Kon Tum]
-* [http://www.dulichso.com/ Vietnam travel site]
-* [http://www.ivivu.com Vietnam travel and hotel guide - Kon Tum]
+* [http://1tour.vn/khach-san/ hotel guide]- Kon Tum
+* [http://1tour.vn Vietnam travel site]
+* [http://blog.1tour.vn Vietnam travel and hotel guide - Kon Tum]
 {{Vietnam}}
 {{Vietnam-geo-stub}}
 
