--- a/Lee_Seung_Gi.mw
+++ b/Lee_Seung_Gi.mw
@@ -1,7 +1,7 @@
 {{about|magkanta|king mamyalung football|Lee Seung-Ki}}
 {{Infobox musical artist  <!-- See Wikipedia:WikiProject Musicians -->
 | name                = Lee Seung Gi
-| image               = LEESEUNGGI 20111109.jpg
+| image               = Lee Seung-gi at the premiere for "Love Forecast", 17 January 2015 03.jpg
 | caption             = 
 | image_size          = 
 | background          = solo_singer
