--- a/Integrated_Taxonomic_Information_System.mw
+++ b/Integrated_Taxonomic_Information_System.mw
@@ -1,6 +1,6 @@
 {{redirect|ITIS|the Transport Information System|Integrated Transport Information System|other uses|Itis}}
 
-[[File:ITIS logo.jpg|thumb|Ing logo ning ITIS]]Ing '''Integrated Taxonomic Information System''' ('''ITIS''') metung yang pamisosiung<ref name="memorandum of understanding">{{cite web
+[[File:ITIS logo.svg|thumb|Ing logo ning ITIS]]Ing '''Integrated Taxonomic Information System''' ('''ITIS''') metung yang pamisosiung<ref name="memorandum of understanding">{{cite web
 | title=ITIS Memorandum of Understanding
 | publisher=Integrated Taxonomic Information System
 | url=http://www.itis.gov/mou.html
