A Coruña doesn't have any official flag. Info (in Spanish): [[:es:Discusi%C3%B3n:La_Coru%C3%B1a#Bandera]] & [[es:Plantilla_discusi%C3%B3n:Ficha_de_localidad_de_Espa%C3%B1a#La_Provincia_de_La_Coru.C3.B1a_no_tiene_bandera]]

--- a/A_Coruña.mw
+++ b/A_Coruña.mw
@@ -5,8 +5,8 @@ spanish_name = La Coruña|
 nickname = |
 city_motto = |
 city_motto_means = |
-image_flag = Bandera_coruña.png|
-image_flag_size = 115px|
+image_flag = |
+image_flag_size = |
 image_coat_of_arms = Escudo A Coruña.jpg|
 image_coat_of_arms_size = 90px|
 image_city_map = 255px-La Coruna, Spain location3.png|
