*Empty MediaWiki Message*

--- a/Barack_Obama.mw
+++ b/Barack_Obama.mw
@@ -1,7 +1,7 @@
 {| class="messagebox protected" style="border: 1px solid #8888aa; padding: 0px; font-size:9pt;"
 |}{{Infobox President
 | name=Barack Obama
-| image=Official portrait of Barack Obama.jpg
+| image=President_Barack_Obama.jpg
 | order=44th [[Pamuntuk ning United States]]
 | term_start=[[Eneru 20]], [[2009]]
 | vicepresident=[[Joe Biden]]
