*Empty MediaWiki Message*

--- a/Nagorno-Karabakh.mw
+++ b/Nagorno-Karabakh.mw
@@ -1,9 +1,9 @@
 {{Infobox Country <!----Non-political information---->
 
-|conventional_long_name = Nagorno-Karabakh
-|common_name        = Nagorno-Karabakh
-|image_flag         = Flag of Nagorno-Karabakh.svg
-|image_coat         =Coat of arms of Nagorno-Karabakh.svg
+|conventional_long_name = Nagorno-Karabakh, Azerbaijan 
+|common_name        = Nagorno-Karabakh 
+|image_flag         = Flag of Azerbaijan.svg
+|image_coat         =Coat of arms of Azerbaijan.svg
 |national_motto     = 
 |national_anthem    = {{lang|cy|"''[[]]''"}}<br /><small>("Free and Independent Artsakh")</small>
 |official_languages = [[Armenian language]]
@@ -14,7 +14,7 @@
 |leader_name1       = [[Bako Sahakyan]]
 |leader_title2      = [[List of Prime Ministers of Nagorno-Karabakh|Prime Minister]]
 |leader_name2       = [[Arayik Harutyunyan]]
-|sovereignty_type   = ''De facto'' independence from [[Azerbaijan]]
+|sovereignty_type   = 
 |established_event1 = Declared
 |established_date1  = [[2 September]] [[1991]]
 |established_event2 = Recognition
