*Empty MediaWiki Message*

--- a/Nagorno-Karabakh.mw
+++ b/Nagorno-Karabakh.mw
@@ -1,6 +1,6 @@
 {{Infobox Country <!----Non-political information---->
 
-|conventional_long_name = Nagorno-Karabakh, Azerbaijan 
+|conventional_long_name = Nagorno-Karabakh, [[Azerbaijan]] 
 |common_name        = Nagorno-Karabakh 
 |image_flag         = Flag of Azerbaijan.svg
 |image_coat         =Coat of arms of Azerbaijan.svg
