*Empty MediaWiki Message*

--- a/Louisville-Jefferson_County_(balance),_Kentucky.mw
+++ b/Louisville-Jefferson_County_(balance),_Kentucky.mw
@@ -50,7 +50,7 @@
 <!-- This article uses [[Wikipedia:Footnotes]]. Please use this format when making edits to references in the article. Any external links directly added to this section will be summarily and swiftly deleted. -->
 {{reflist|2}}
 
-== Dkal pang pamamasa ==
+== Sources ==
 * {{cite book
  | first = Dennis
  | last = Domer
