--- a/Helen_Mirren.mw
+++ b/Helen_Mirren.mw
@@ -1,3 +1,4 @@
+[[Image:Helen Mirren 2014.jpg|thumb|230px|Hellen Mirren]]
 I '''Helen Mirren''' (mibait a '''Helen Lydia Mironoff'''; Juliu 26, 1945) metung yang Britanico artista. Metung ya kareng pekasikat a artista king pelikula aniang dekadang 1960, 1970, 1980, 1990, 2000 ampong 2010.
 == Aliwa pang website (karinan king Aptas) ==
 * {{imdb name|id=0000545|name=Helen Mirren}}
