--- a/Charlotte_Rampling.mw
+++ b/Charlotte_Rampling.mw
@@ -1,3 +1,4 @@
+[[Image:Charlotte Rampling cropped 2009.jpg|thumb|220px|Charlotte Rampling]]
 '''Charlotte Rampling''' ([[Pebreru 5]], [[1946]]) metung yang Britanico artista ampong [[modelu]]. Metung ya kareng pekasikat a artista king pelikula aniang dekadang 1960, 1970 ampong 1980.
 == Aliwa pang website (karinan king Aptas) ==
 * {{imdb name|id=0001648|name=Charlotte Rampling}}
