--- a/Daniel_Henney.mw
+++ b/Daniel_Henney.mw
@@ -1,3 +1,4 @@
+[[Image:Daniel Henney cropped.jpg|thumb|200px|Daniel Henney]]
 I '''Daniel Henney''' (다니엘 헤니) metung yang Amerikanung artista king [[Mauling Korea]].
 
 {{stub}}
