+ World Diabetes Day.

--- a/Diabetes_mellitus.mw
+++ b/Diabetes_mellitus.mw
@@ -1,22 +1,22 @@
 {{pp-semi-vandalism|small=yes}}
-{{DiseaseDisorder infobox | 
-  Name            = Diabetes mellitus |
-  ICD10           = {{ICD10|E|10||e|10}}–{{ICD10|E|14||e|10}} |
-  ICD9            = {{ICD9|250}} |
-  MedlinePlus     = 001214 |
-  eMedicineSubj   = med |
-  eMedicineTopic  = 546 |
-  eMedicine_mult  = {{eMedicine2|emerg|134}} |
-  MeshName        = Diabetes |
-  MeshNumber      = C18.452.394.750 |
+{{DiseaseDisorder infobox
+|Name            = Diabetes mellitus
+|ICD10           = {{ICD10|E|10||e|10}}–{{ICD10|E|14||e|10}}
+|ICD9            = {{ICD9|250}}
+|MedlinePlus     = 001214
+|eMedicineSubj   = med
+|eMedicineTopic  = 546
+|eMedicine_mult  = {{eMedicine2|emerg|134}}
+|MeshName        = Diabetes
+|MeshNumber      = C18.452.394.750
 }}
-{{two other uses||the disease characterized by excretion of large amounts of very dilute urine|diabetes insipidus|diabetes mellitus in pets|diabetes in cats and dogs}} 
+{{two other uses||the disease characterized by excretion of large amounts of very dilute urine|diabetes insipidus|diabetes mellitus in pets|diabetes in cats and dogs}}
 
-Ing '''Diabetes mellitus''' ([[International Phonetic Alphabet|IPA pronunciation]]: [{{IPA|daɪəˈbitiz}}], neng misan{{IPA|[ˌdaɪəˈbitəs]}})  metung yang sakit keng e pamaglaso ning pengan  a ausan dang [[hyperglycemia]] o (matas [[mayumu keng daya]]) at aliwa pang pawaga, a aliwa keng metung a sakit o kabilyan. Ing [[World Health Organization]] kikilalanan do ring atlung tinduk a diabetes: ing ''[[diabetes mellitus type 1|type 1]]'', ''[[diabetes mellitus type 2|type 2]]'', at ''[[gestational diabetes]] o [[diabetes inyang manganak]]'',<ref name "WHO1999-DefDiagClass">{{cite web | author=[[World Health Organisation]] Department of Noncommunicable Disease Surveillance | title=Definition, Diagnosis and Classification of Diabetes Mellitus and its Complications | year=1999 | url=http://whqlibdoc.who.int/hq/1999/WHO_NCD_NCS_99.2.pdf | format=PDF}}</ref>  nung nu deng waga kalupa da la at ing uyab na niti, dapot miyayaliwa ing sangkan at pangasalbag keng populasyun. Ing katataulian uli da ring [[beta cell]]s  na ning  [[kundilat]] (o pancreas) nung nu eya makapalual a ustung dakal a [[insulin]] para aiwasan ing hyperglycemia.<ref name=Rother>{{cite journal |last=Rother |first=KI |year=2007 |title=Diabetes Treatment — Bridging the Divide |journal=N Engl J Med |volume=356 |issue=15 |pages=1499-1501 |id= |url=http://content.nejm.org/cgi/content/full/356/15/1499}}</ref> Ing Tinduk (Type) 1 keraklan uli ning [[autoimmune disease|autoimmune]] a pangasira ning [[pancreas|kundilat]] da ring [[beta cell]]s nung nu ila reng gagawa keng [[insulin]]. Ing Tinduk (Type) 2 ing katangian na ding ing tissue-wide [[insulin a resistensiya]] at maragul a pamanaliwa; neng misan kakawalan yang [[beta cell]] a gamit. Ing [[gestational diabetes]] kalupa ne ing type 2 diabetes, na makaugne ya ing insulin resistance; deng [[hormones]] ning mabuktut ilang maging sangkan ning insulin resistance kareng babaing amana da reti kareng karelang pipumpunan a maka-akda lang mika makanyan a kabilyan.
+Ing '''Diabetes mellitus''' ([[International Phonetic Alphabet|IPA pronunciation]]: [{{IPA|daɪəˈbitiz}}], neng misan{{IPA|[ˌdaɪəˈbitəs]}}) metung yang sakit keng e pamaglaso ning pengan a ausan dang [[hyperglycemia]] o (matas [[mayumu keng daya]]) at aliwa pang pawaga, a aliwa keng metung a sakit o kabilyan. Ing [[World Health Organization]] kikilalanan do ring atlung tinduk a diabetes: ing ''[[diabetes mellitus type 1|type 1]]'', ''[[diabetes mellitus type 2|type 2]]'', at ''[[gestational diabetes]] o [[diabetes inyang manganak]]'',<ref name "WHO1999-DefDiagClass">{{cite web | author=[[World Health Organisation]] Department of Noncommunicable Disease Surveillance | title=Definition, Diagnosis and Classification of Diabetes Mellitus and its Complications | year=1999 | url=http://whqlibdoc.who.int/hq/1999/WHO_NCD_NCS_99.2.pdf | format=PDF}}</ref> nung nu deng waga kalupa da la at ing uyab na niti, dapot miyayaliwa ing sangkan at pangasalbag keng populasyun. Ing katataulian uli da ring [[beta cell]]s na ning [[kundilat]] (o pancreas) nung nu eya makapalual a ustung dakal a [[insulin]] para aiwasan ing hyperglycemia.<ref name=Rother>{{cite journal |last=Rother |first=KI |year=2007 |title=Diabetes Treatment — Bridging the Divide |journal=N Engl J Med |volume=356 |issue=15 |pages=1499-1501 |id= |url=http://content.nejm.org/cgi/content/full/356/15/1499}}</ref> Ing Tinduk (Type) 1 keraklan uli ning [[autoimmune disease|autoimmune]] a pangasira ning [[pancreas|kundilat]] da ring [[beta cell]]s nung nu ila reng gagawa keng [[insulin]]. Ing Tinduk (Type) 2 ing katangian na ding ing tissue-wide [[insulin a resistensiya]] at maragul a pamanaliwa; neng misan kakawalan yang [[beta cell]] a gamit. Ing [[gestational diabetes]] kalupa ne ing type 2 diabetes, na makaugne ya ing insulin resistance; deng [[hormones]] ning mabuktut ilang maging sangkan ning insulin resistance kareng babaing amana da reti kareng karelang pipumpunan a maka-akda lang mika makanyan a kabilyan.
 
 Deng Type 1 at 2 malyari lang uluan ing karelang [[chronic disease|chronic a kabilyan]], dapot mayuyulu la kanita manibat ing [[insulin]] meging yang pangmedicina inyang 1921, at ngeni panibalan de kapamilatan ning piyabeng [[Diet (nutrition)|dieta]], [[Anti-diabetic drug|tabletas]] (keng type 2) at, maralas, pamandagdag insulin. Ing gestational diabetes keraklan mawawala ya potang kaibat ning pamanganak.
 
-Ing '''Diabetes''' malyari yang muli keng dakal a complicasyun. [[Acute (medical)|Acute]] complicasyun ([[hypoglycemia]], [[ketoacidosis]] o kaya [[nonketotic hyperosmolar coma]]) malyari nung ing sakit e ya meyasikasung masalese. Seriosung pangmaluatan a complicasyun kayabe la deng [[cardiovascular disease]] (doble ing kapalyarian), [[chronic renal failure]] ([[diabetic nephropathy]] iti ing peka sangkan ning [[renal dialysis|dialysis]] kareng mealkus a yatung mangatua), [[diabetic retinopathy|retinal pangasira]] (nung nu maging sangkan ning panga[[bulag]] at ing pekasangkan ning pangabulag ding e masyudaung mangatua kareng menga-alkus a yatu), [[diabetic neuropathy|nerve pangasira]] (dakal a miyayaliwa), at microvascular a pangasira, nung nu ing ari ene[[sisyas]] o (titikdo) at mainang pangayulu, lalu na deng bitis, miras keng ausan dang [[gangrene]] nung nu mangailangan  [[pututan ya ing bitis]] — ing mumunang sangkan da reng non-traumatic amputation kareng e masyadung mangatua kareng meyalskus a bangsa. ustung pamanulu ning diabetes, at makanyan mu rin keng ustu pamaningat keng  [[prisyun keng daya]] at pamaningat keng bie (kalupa na ning e  [[tobacco smoking|pamanigarilyu]] at maustang pamaningat keng [[human weight|timbang ning katawan]]), mapalyaring salese ka laban kareng mengasabing complicasyun.
+Ing '''Diabetes''' malyari yang muli keng dakal a complicasyun. [[Acute (medical)|Acute]] complicasyun ([[hypoglycemia]], [[ketoacidosis]] o kaya [[nonketotic hyperosmolar coma]]) malyari nung ing sakit e ya meyasikasung masalese. Seriosung pangmaluatan a complicasyun kayabe la deng [[cardiovascular disease]] (doble ing kapalyarian), [[chronic renal failure]] ([[diabetic nephropathy]] iti ing peka sangkan ning [[renal dialysis|dialysis]] kareng mealkus a yatung mangatua), [[diabetic retinopathy|retinal pangasira]] (nung nu maging sangkan ning panga[[bulag]] at ing pekasangkan ning pangabulag ding e masyudaung mangatua kareng menga-alkus a yatu), [[diabetic neuropathy|nerve pangasira]] (dakal a miyayaliwa), at microvascular a pangasira, nung nu ing ari ene[[sisyas]] o (titikdo) at mainang pangayulu, lalu na deng bitis, miras keng ausan dang [[gangrene]] nung nu mangailangan [[pututan ya ing bitis]] — ing mumunang sangkan da reng non-traumatic amputation kareng e masyadung mangatua kareng meyalskus a bangsa. ustung pamanulu ning diabetes, at makanyan mu rin keng ustu pamaningat keng [[prisyun keng daya]] at pamaningat keng bie (kalupa na ning e [[tobacco smoking|pamanigarilyu]] at maustang pamaningat keng [[human weight|timbang ning katawan]]), mapalyaring salese ka laban kareng mengasabing complicasyun.
 {{Diabetes}}
 
 == Lawen ya rin ==
@@ -26,19 +26,22 @@ Ing '''Diabetes''' malyari yang muli keng dakal a complicasyun. [[Acute (medical
 <!-- ----------------------------------------------------------
   See http://en.wikipedia.org/wiki/Wikipedia:Footnotes for a
   discussion of different citation methods and how to generate
-  footnotes using the <ref>, </ref> and  <reference /> tags
+  footnotes using the <ref>, </ref> and <reference /> tags
 ----------------------------------------------------------- -->
 {{reflist|2}}
 
 == Suglung Palwal ==
-<!-- BEFORE inserting new links here you should first post it to the talk page, otherwise your edit is likely to be reverted; this section is reserved for official or authoritative resources-->
+<!-- BEFORE inserting new links here you should first post it to the talk page, otherwise your edit is likely to be reverted; this section is reserved for official or authoritative resources -->
+* [[:en:World Diabetes Day|World Diabetes Day]] - [[Nobiembri 14]]
+* [http://www.diabetesphil.org/ Diabetes Philippines]
+* [http://www.diabetescenter.org.ph/ Diabetes Center Philippines]
 * [http://www.diabetes.org/ American Diabetes Association]
 * [http://www.diabetesnsw.com.au/ Diabetes Australia-NSW]
 * [http://www.diabetes.ca/ Canadian Diabetes Association]
 * [http://www.who.int/nutrition/topics/dietnutrition_and_chronicdiseases/en/ Diet, Nutrition and the prevention of chronic diseases] (including diabetes) by a Joint [[WHO]]/[[FAO]] Expert consultation (2003) - [http://www.greenfacts.org/en/diet-nutrition/l-2/6-diabetes-diet.htm Summary] by [[GreenFacts]].
 * [http://www.cdc.gov/diabetes/ Centers for Disease Control Diabetes Section]
-* [http://www.diabetes.org.uk  Diabetes UK]
-* [http://healthy-ojas.com/diabetes/diabetes-details.html  Diabetes]
+* [http://www.diabetes.org.uk Diabetes UK]
+* [http://healthy-ojas.com/diabetes/diabetes-details.html Diabetes]
 * [http://www.dhealth.org/ Diabetes Health Institute]
 * [http://www.diabetesinstitute.org/ Diabetes Institute for Immunology and Transplantion]
 * [http://www.joinleenow.org The Iacocca Foundation]
