I changed the demonym Reddingite (which I, as a resident, have never heard) to Reddinger

--- a/Redding,_California.mw
+++ b/Redding,_California.mw
@@ -33,7 +33,7 @@
 |leader_title2            = [[City Manager]]
 |leader_name2             = [[Kurt Starman]]
 |founder = [[Pierson B. Reading]]
-|demonym = Shastan/Reddingite
+|demonym = Shastan/Reddinger
 |established_title        = Settled
 |established_date         = 1873
 |established_title2       = 
