Replacing Montagem_São_Paulo.jpg with [[File:São_Paulo_Poster.jpg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: Best image quality).

--- a/São_Paulo.mw
+++ b/São_Paulo.mw
@@ -2,7 +2,7 @@
 |name                   = São Paulo
 |settlement_type        = [[Municipalities of Brazil|Municipality]]
 |official_name          = ''Município de São Paulo''<br/>Munisipalidad ning São Paulo
-||image_skyline         = Montagem São Paulo.jpg
+||image_skyline         = São Paulo Poster.jpg
 |image_caption          = Photo montage ning lakanbalen ning São Paulo. Manibat king kayli papuntang wanan: [[São Paulo Cathedral]]; [[Torre Norte|United Nations Business Center]]; [[São Paulo Museum of Art]] king [[Paulista Avenue]]; [[Museum of Ipiranga]]; Bandeiras Monument; [[Octávio Frias de Oliveira Bridge]]; ampo ing downtown skyline manibat king [[Altino Arantes Building]].
 |nickname               = ''Terra da Garoa'' (Land of [[Drizzle]]) and ''Sampa''
 |image_flag             = São Paulo City flag.svg
