/* Suglung Palual */ Dead link

--- a/Bolivian_Coriander.mw
+++ b/Bolivian_Coriander.mw
@@ -18,7 +18,7 @@ Ing '''Bolivian coriander''' metung yang tanaman nung nu ding kayang bulung mali
 == Suglung Palual ==
 * {{commonscat-inline}}
 * [http://www.rocoto.com/Seeds%20&%20Plants/2-Seeds%20/15-Porophyllum%20ruderale%20(Quilqui%C3%B1a).html?Plants= Bolivian coriander with Rocoto peppers in salsas]
-* [http://www.itis.usda.gov/servlet/SingleRpt/SingleRpt?search_topic=TSN&search_value=38263 USDA ITIS entry]
+* [http://www.itis.usda.gov/servlet/SingleRpt/SingleRpt?search_topic=TSN&search_value=38263 USDA ITIS entry] {{Dead link}}
 
 == Paniabtan da reng butul ==
 * [http://www.sandhillpreservation.com/Seeds.htm Sand Hill Preservation]
