Removing "MustafaKemalAtaturk.jpg", it has been deleted from Commons by [[commons:User:Jameslwoodward|Jameslwoodward]] because: Per [[:c:Commons:Deletion requests/File:MustafaKemalAtaturk.jpg|]].

--- a/Turkiya.mw
+++ b/Turkiya.mw
@@ -57,7 +57,7 @@ Ing '''Turkiya''' ([[Amanung Turku|Turku]]: ''Türkiye''), opisyal a yawus '''Re
 
 == Gallery ==
 <gallery>
-File:MustafaKemalAtaturk.jpg| [[Mustafa Kemal Atatürk]]
+| [[Mustafa Kemal Atatürk]]
 File:Aya sofya.jpg| 
 File:Anitkabir.HB.jpg| 
 File:Kocatepe Mosque Ankara.jpg| 
