--- a/Mustafa_Kemal_Atatürk.mw
+++ b/Mustafa_Kemal_Atatürk.mw
@@ -4,7 +4,7 @@
 {{Infobox officeholder
 |name=Mustafa Kemal Atatürk
 |nationality=[[Turkey|Turkish]]
-|image=MustafaKemalAtaturk.jpg
+|image=
 |imagesize=250px
 |caption=Pamuntuk Atatürk
 |birth_date=19 Mayu 1881 <small>([[Mustafa Kemal Atatürk's personal life#Birth date|Conventional]].  Ing aldong ini inampun ne ning Pamuntuk mismu para keng pangopisyal a kapagnasan king lalam ning alang mikibalu king tutung aldo.)</small>
