--- a/Austin,_Texas.mw
+++ b/Austin,_Texas.mw
@@ -107,7 +107,7 @@
 * [http://austinforum.8.forumer.com/ Austin Skyscraper Forum] - Discusssion forum about skyscrapers, transportation and urban development in Austin
 * [http://www.romanreign.com/austin_dog_friendly.htm] - Keeping Austin Dog Friendly
 * [http://www.emporis.com/en/wm/ci/?id=101341 Emporis database of Austin skyscrapers] - Skyscraper database of facts and information about Austin's skyscrapers
-* {{Handbook of Texas|id=AA/hda3|name=Austin}}
+* {{Handbook of Texas|id=hda03|name=Austin}}
 * [http://www.census.gov/population/www/estimates/Estimates%20pages_final.html Population Estimates for Metropolitan, Micropolitan, and Combined Statistical Areas]
 
 {{Texas}}
