--- a/Dallas,_Texas.mw
+++ b/Dallas,_Texas.mw
@@ -69,7 +69,7 @@ footnotes =
 * [http://texashistory.unt.edu/browse/contributor/DHS/ Dallas Historical Society photographs hosted by the Portal to Texas History]
 * [http://dallaslibrary.org/ Dallas Public Library]
 * [http://geonames.usgs.gov/pls/gnispublic/f?p=121:3:8628362059327354428::NO::P3_FID:1380944 USGS Elevation data]
-* {{Handbook of Texas|id=DD/hdd1|name=Dallas}}
+* {{Handbook of Texas|id=hdd01|name=Dallas}}
 * {{wikivoyage|Dallas}}
 
 {{Geolinks-US-cityscale|32.78|-96.80}}
