--- a/El_Paso,_Texas.mw
+++ b/El_Paso,_Texas.mw
@@ -53,7 +53,7 @@
 * [http://texashistory.unt.edu/permalink/meta-pth-6112 ''Forty years at El Paso, 1858-1898; recollections of war, politics, adventure, events, narratives, sketches, etc.''], by W. W. 
 * [http://www.elpasompo.org/ El Paso Metropolitan Planning Organization]
 Mills, hosted by the [http://texashistory.unt.edu/ Portal to Texas History].
-* {{Handbook of Texas|id=EE/hde1|name=El Paso, Texas}}
+* {{Handbook of Texas|id=hde01|name=El Paso, Texas}}
 
 {{Texas}}
 {{USLargestCities}}
