--- a/Fort_Worth,_Texas.mw
+++ b/Fort_Worth,_Texas.mw
@@ -66,7 +66,7 @@
 * [http://www.sundancesquare.com/ Sundance Square]
 * [http://www.downtownfortworth.com/ Downtown Fort Worth]
 * [http://fortworthology.com/ Fort Worthology]
-* {{Handbook of Texas|id=FF/hdf1|name=Fort Worth, Texas}}
+* {{Handbook of Texas|id=hdf01|name=Fort Worth, Texas}}
 
 {{Dallas/Fort Worth Metroplex}}
 {{Texas}}
