--- a/Lyndon_B._Johnson.mw
+++ b/Lyndon_B._Johnson.mw
@@ -36,7 +36,7 @@
 * [http://www.whitehouse.gov/history/presidents/lj36.html White House biography]
 * [http://www.quotes-famous.com/person/Lyndon-B.-Johnson-quotes.html Lyndon B. Johnson Quotes]
 * [http://texashistory.unt.edu/search.tkl?type=subject&q=Johnson,%20Lyndon%20B.&q2=KWD  Photos of Lyndon B. Johnson], hosted by the [http://texashistory.unt.edu/ Portal to Texas History]
-* {{Handbook of Texas|id=JJ/fjo19|name=Lyndon Baines Johnson}}
+* {{Handbook of Texas|id=fjo19|name=Lyndon Baines Johnson}}
 * [http://www.whitehousetapes.org/pages/tapes_lbj.htm LBJ's secret White House recordings @ University of Virginia's Miller Center of Public Affairs]
 * [http://educatetheusa.com/LBJ36.html Lyndon B. Johnson], article on educatetheusa.com.
 * [http://www.yale.edu/lawweb/avalon/presiden/inaug/johnson.htm Inaugural Address]
