--- a/San_Antonio,_Texas.mw
+++ b/San_Antonio,_Texas.mw
@@ -57,7 +57,7 @@ footnotes =
 
 *[http://www.westoverlink.com Greater Westover Hills, San Antonio]
 *[http://www.northwestsa.com Greater Northwest San Antonio Community Portal] 
-*{{Handbook of Texas|id=SS/hds2|name=San Antonio}}
+*{{Handbook of Texas|id=hds02|name=San Antonio}}
 *[http://www.woai.com WOAI] San Antonio's [[NBC]] TV and [[AM radio]] news site
 *[http://www2.mysanantonio.com/aboutus/expressnews/ ''San Antonio Express-News''] San Antonio's local newspaper
 *[http://www.sanantoniolightning.com San Antonio Lightning] San Antonio [[muckraking]] website
