*Empty MediaWiki Message*

--- a/Lin_Yutang.mw
+++ b/Lin_Yutang.mw
@@ -1,6 +1,6 @@
 {{chinese name|Lin (林)}}
 {{Chinese|t=林語堂|s=林语堂|j=lam4 jyu5 tong4|p=Lín Yǔtáng|gr=Lin Yeutarng|poj=Lîm Gí-tông|pic=Linyutang.jpg|piccap=I Lin Yutang, a linetratu nang <br />[[Carl Van Vechten]], 1939|picsize=200px}}
-I '''Lin Yutang''' (Octubre 10, 1895 &ndash; Marzo 26, 1976) metung yang Isik a talasulat ampong manimbentu (''inventor''). Uli ning kayang istilung e pormal dapot mapinu istilu king Tsino ampong Ingles, metung ya kareng pekamaimpluwensiyang talasulat ning kayang dai o henerasyun, at ''bestseller'' la king [[Albugan]] deng kayang likas king Ingles da reng kasulatan a [[Klasiku ning Tsina|kasulatan a klasiku ning Tsina]].
+I '''Lin Yutang''' (Oktubri 10, 1895 &ndash; Marsu 26, 1976) metung yang Isik a talasulat ampong manimbentu (''inventor''). Uli ning kayang istilung e pormal dapot mapinu istilu king Tsino ampong Ingles, metung ya kareng pekamaimpluwensiyang talasulat ning kayang dai o henerasyun, at ''bestseller'' la king [[Albugan]] deng kayang likas king Ingles da reng kasulatan a [[Klasiku ning Tsina|kasulatan a klasiku ning Tsina]].
 
 ==Karagdagang babasan==
 
