*Empty MediaWiki Message*

--- a/Park_Yong-ha.mw
+++ b/Park_Yong-ha.mw
@@ -88,6 +88,10 @@ I ''' Park Yong Ha''' (Agosto 12, 1977 – Hunyo 30, 2010) metung yang artista a
 ==Dalerayan==
 {{reflist}}
 
+==Kasusug Kiluwal==
+* [http://www.cyworld.com/yonhastyle Yonha's Personal Homepage]
+* [http://www.hancinema.net/korean_Park_Yong-ha.php Park Yong-ha king HanCinema]
+
 {{Suli}} 
 
 [[Category:Deng artista king Mauling Korea]]
