Removing "Map_of_Aranda_de_Duero,_Burgos.jpg", it has been deleted from Commons by [[commons:User:Jcb|Jcb]] because: Missing source as of 15 April 2016 -  Using [[:c:COM:VFC|VisualFileChange]]..

--- a/Aranda_de_Duero.mw
+++ b/Aranda_de_Duero.mw
@@ -3,7 +3,7 @@ official_name = Aranda de Duero, Espanya |
 nickname = Arandinos/as |
 image_flag = Banderadearanda.png |
 image_seal =  |
-image_map = Map of Aranda de Duero, Burgos.jpg|
+image_map =|
 map_caption = Location of Aranda de Duero|
 subdivision_type = [[List of municipalities in Burgos|Municipality]] |
 subdivision_name = Aranda de Duero|
