Same view in higher reolution - Spain Andalusia Cordoba BW 2015-10-27 12-15-09.jpg

--- a/Espanya.mw
+++ b/Espanya.mw
@@ -55,7 +55,7 @@ Ing '''Kayarian ning Espanya''' ([[Castila (amanu)|Castila]] at [[Galician]]: ''
 === Amlat bayu Misulat ===
 
 === Roman Empire ===
-[[File:Cordoba, Roman Bridge and Mosque-Cathedral.jpg|thumb|right|200px|Tete Romanu king Cordoba]]
+[[File:Spain Andalusia Cordoba BW 2015-10-27 12-15-09.jpg|thumb|right|200px|Tete Romanu king Cordoba]]
 
 
 
