*Empty MediaWiki Message*

--- a/Benicasim%2FBenicàssim.mw
+++ b/Benicasim%2FBenicàssim.mw
@@ -23,7 +23,7 @@
 }}
 
 [[image:BenicassimPromenade.jpg|thumb|right|Benicassim: Seafront promenade.]]
-
+[[File:Ajuntament de Benicàssim.JPG|thumb|Ajuntament de Benicàssim]]
 Ing '''Benicàssim''' ([[Spanish language|Spanish]]: ''Benicasim'', [[Arabic language|Arabic]]: بنو قاسم agpang keng [[Numismatic]] a ikit da <ref> [http://www.benicassim.org/es/Historia.htm benicassim.org/es/Historia.htm] </ref>) metung yang [[municipalidad]] sasaklon ne ing  [[pantalan]] a [[balen]] ampong ing beach resort atiu keng lalawigan ning [[Castellón (province)|Castelló]], keng [[Costa del Azahar]] king [[Espania]]. 
 
 
@@ -38,3 +38,4 @@ Ing '''Benicàssim''' ([[Spanish language|Spanish]]: ''Benicasim'', [[Arabic lan
 {{valencia-geo-stub}}
 
 {{Plana Alta}}
+[[File:Platja dels Terrers (Benicàssim-Benicasim).JPG|thumb|Platja dels Terrers (Benicàssim-Benicasim)]]
