--- a/Amanung_Ingles.mw
+++ b/Amanung_Ingles.mw
@@ -5,7 +5,8 @@ Ing '''Amanung Ingles''' (''English language'') metung ya kareng pamyalita king 
 ==Suglung palwal==
 {{Sisterlinks|commons=Category:English language|b=Subject:English language|v=Topic:English Language|n=no|s=no|species=no|voy=no|d=Q1860|wikt=Category:English language}}
 * [http://www.lel.ed.ac.uk/research/gsound/Eng/Database/Phonetics/Englishes/Home/HomeMainFrameHolder.htm Accents of English from Around the World (University of Edinburgh)] Sound files comparing how 110 words are pronounced in 50 English accents from around the world
-
+* [https://www.britishcouncil.ph/ British Council Philippines]
+* [http://www.tesol.ph/ TESOL Philippines]
 {{Suli}}
 
 [[Category:Deng amanu ning Europa]]
