*Empty MediaWiki Message*

--- a/Grace_Poe.mw
+++ b/Grace_Poe.mw
@@ -1,3 +1,5 @@
+[[File:Poe grace.jpg|thumb|170px|right|Grace Poe]]
+
 I '''Mary Grace Sonora Poe-Llamanzares''' (mibait Setyembri 3, 1968 king [[Iloilo Lakanbalen]]) metung yang politiku king [[Pilipinas]].
 
 {{stub}}
