([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Flag ElPasoTX.jpg]] → [[File:Flag of El Paso, Texas.jpg]] typo fixed

--- a/El_Paso,_Texas.mw
+++ b/El_Paso,_Texas.mw
@@ -3,7 +3,7 @@
 |nickname = Star of the Southwest," "The Sun City," and "Land of the Sun
 |website = [http://www.elpasotexas.gov www.elpasotexas.gov]
 |image_skyline = El_Paso_Skyline.jpg
-|image_flag = Flag ElPasoTX.jpg
+|image_flag = Flag of El Paso, Texas.jpg
 |image_seal = Seal ElPasoTX.jpg
 |image_map = TXMap-doton-ElPaso.png
 |map_caption = Location in the state of [[Texas]]
