--- a/Protina.mw
+++ b/Protina.mw
@@ -1,3 +1,4 @@
+[[File: Protein_mosaic.jpg|thumb|protein model mosaic.]]
 Deng protina, mangaragul lang [[molecule]] a gawa kareng mas mangalating 
 unit a awsan dang [[:en:amino acid]]. Atin lang protina deng animal, tanaman, 
 fungi, bacteria, ampo ing sarili tamung katawan. Metung la muring maulagang 
