Replacing POL_Bełżyce_COA.svg with [[File:POL_Bełżyce_COA_old.svg]] (by [[commons:User:CommonsDelinker|CommonsDelinker]] because: [[:commons:COM:FR|File renamed]]: New version adopted 17 March 2016).

--- a/Lublin_Voivodeship.mw
+++ b/Lublin_Voivodeship.mw
@@ -45,7 +45,7 @@ Ing  voivodeship atin yang 4a lakanbalen at balen, deng apat a lakanbalen ausan 
 * [[File:POL Poniatowa COA.svg|24px]] [[Poniatowa]] - '''9.983''' <small>(15,20 km²)</small>
 * [[File:POL Ryki COA.svg|24px]] [[Ryki]] - '''9.730''' <small>(27,38 km²)</small>
 * [[File:POL Opole Lubelskie COA.svg|24px]] [[Opole Lubelskie]] - '''8.842''' <small>(14,83 km²)</small>
-* [[File:POL Bełżyce COA.svg|24px]] [[Bełżyce]] - '''7.090''' <small>(23,46 km²)</small>
+* [[File:POL Bełżyce COA old.svg|24px]] [[Bełżyce]] - '''7.090''' <small>(23,46 km²)</small>
 * [[File:Terespol herb.svg|24px]] [[Terespol]] - '''5.981''' <small>(10,20 km²)</small>
 * [[File:POL Szczebrzeszyn COA.svg|24px]] [[Szczebrzeszyn]] - '''5.305''' <small>(29,04 km²)
 </small>
